color and alignment issues

--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -1,9 +1,15 @@
+* {
+  background-color: #A8A4A6;
+  position: relative;
+}
+
 /* Navigation Bar */
 .bg-myblack {
   background-color: #19110B;
 }
 
 .links {
+  background-color:#19110B;
   text-decoration: none;
   color: #A8A4A6;
   font-size: 30px;
@@ -59,20 +65,25 @@
 }
 
 .profilePic {
+  display: block;
   width: 60%;
   margin-left: auto;
   margin-right: auto;
-  display: block;
   border-radius: 40%
 }
 
 /* Projects */
-.grid {
-  min-height: 100%;
+.myOrange{
+  background-color: #9B6A45;
+}
+
+.grid { 
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-around;
+  height: fit-content;
+  margin-bottom: 50px;
 }
 
 .grid>div {
@@ -83,10 +94,11 @@
   background-color: #9B6A45;
   border-radius: 10px 10px 10px 10px;
   overflow: hidden;
-  height: 30%;
+  width: fit-content;
   -webkit-box-shadow: 0px 12px 18px -6px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 12px 18px -6px rgba(0, 0, 0, 0.3);
-  margin: 20px;
+  
+  margin-bottom: 50px;
   padding-left: 10px;
   text-align: center;
   
@@ -99,6 +111,7 @@
 }
 
 .mylink{
+  background-color: #9B6A45;
   color: #541824;
   font-size: 20px;
   font-style: oblique;
@@ -107,6 +120,8 @@
   text-decoration: none;
 }
 .project-icon{
+  background-color: #9B6A45;
+
   height: 10%;
   width: 10%;
 }
@@ -116,6 +131,7 @@
 .myResume {
   text-decoration: none;
 }
+
 
 .resumePic {
   text-align:center;
@@ -143,7 +159,6 @@
 }
 
 /* Contact */
-.contact-form {}
 
 .contact-headers {
   text-align: center;
@@ -168,6 +183,7 @@
   height: 30%;
   justify-self: space-around;
   margin-left: 10%;
+  background-color: white;
 }
 
 .button {
@@ -184,4 +200,12 @@ footer.bg-myBlack {
 
 .icons{
   color:#A8A4A6;
+  background-color: #19110B;
+}
+
+.footer-size{
+  color: #19110B;
+  position: absolute;
+  margin-bottom: 40;
+  height: 2.5rem;
 }
